--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -9,9 +9,19 @@ vars:
 tasks:
   default:
     desc: Build and run telegrammy in Docker container
-    aliases: [run]
-    deps:
-      - build
+    cmds:
+      - task: build
+      - task: run
+    silent: true
+
+  build:
+    desc: Build telegrammy Docker image
+    cmds:
+      - docker build {{.APP_DIR}} -t telegrammy
+    silent: true
+
+  run:
+    desc: Run telegrammy in Docker container
     cmds:
       - |
         docker run \
@@ -24,8 +34,9 @@ tasks:
           telegrammy
     silent: true
 
-  build:
-    desc: Build telegrammy Docker image
+  clean:
+    desc: Remove all docker containers and images
     cmds:
-      - docker build {{.APP_DIR}} -t telegrammy
+      - docker rm -v -f $(docker ps -qa)
+      - docker rmi -f $(docker images -aq)
     silent: true
